# -AI-Research-Assistant-using-RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  ui.py
app/: embed.py  generator.py  ingest.py  retriever.py
